--- a/create/component/index.html
+++ b/create/component/index.html
@@ -566,12 +566,12 @@ window.cookieconsent.initialise({
 <div class="sect2">
 <h3 id="download_qtcreator_wizards_for_xpcf"><a class="anchor" href="#download_qtcreator_wizards_for_xpcf"></a><a class="link" href="#download_qtcreator_wizards_for_xpcf">Download QTCreator wizards for XPCF</a></h3>
 <div class="paragraph">
-<p>Creating a new component from scratch can be a little bit tricky. To help you, a QTCreator wizard is available and will make the task much easier.
-Start by installing this wizard by launching the <em>install.bat</em> on Windows (in your ${REMAKEN_PKG_ROOT}/packages/win-cl-14.1/xpcf/[version]/wizards) or <em>install.sh</em> on Linux (in your ${REMAKEN_PKG_ROOT}/packages/linux-gcc/xpcf/[version]/wizards).</p>
+<p>Creating a new component from scratch can be a little bit tricky. To help you, a QTCreator wizard is available and will make the task much easier.<br>
+Start by installing this wizard by launching the <em>install.bat</em> on Windows (in your ${REMAKEN_PKG_ROOT}/packages/win-cl-14.1/xpcf/[version]/wizards) or <em>install.sh</em> on Linux (in your ${REMAKEN_PKG_ROOT}/packages/linux-gcc/xpcf/[version]/wizards).<br></p>
 </div>
 <div class="paragraph">
-<p>You can also download the wizard on the following link:
-<a href="https://github.com/SolarFramework/Tools/releases/download/XPCFWizard_2_3_4/XPCF_qtcreator_wizards.zip" class="bare">https://github.com/SolarFramework/Tools/releases/download/XPCFWizard_2_3_4/XPCF_qtcreator_wizards.zip</a>
+<p>You can also download the wizard on the following link:<br>
+<a href="https://github.com/SolarFramework/Tools/releases/download/XPCFWizard_2_3_4/XPCF_qtcreator_wizards.zip" class="bare">https://github.com/SolarFramework/Tools/releases/download/XPCFWizard_2_3_4/XPCF_qtcreator_wizards.zip</a><br>
 Then unzip the downloaded file, and run the <em>install.bat</em> on Windows or the <em>install.sh</em> on Linux.</p>
 </div>
 </div>
@@ -590,7 +590,7 @@ Then unzip the downloaded file, and run the <em>install.bat</em> on Windows or t
 <div class="title">Figure 1. Add a new component in QT</div>
 </div>
 <div class="paragraph">
-<p>Select <code><em>XPCF</em></code> and <code><em>XPCF Component template</em></code> and click on <code><em>Choose</em></code> button.<br></p>
+<p>Select <code><em>XPCF</em></code> and <code><em>XPCF Component class</em></code> and click on <code><em>Choose</em></code> button.<br></p>
 </div>
 <div class="imageblock" style="text-align: center">
 <div class="content">
