--- a/create/component/index.html
+++ b/create/component/index.html
@@ -403,17 +403,6 @@ window.cookieconsent.initialise({
 	
 
 		<li >
-			<a href="/create/build/">
-				Build
-				
-			</a>
-		</li>
-	
-
-	
-	
-
-		<li >
 			<a href="/create/third_parties_packaging/">
 				Third parties packaging
 				
@@ -627,13 +616,15 @@ button.<br></p>
 <span class="preprocessor">#define</span> MYDESCRIPTORSEXTRACTOR_H
 <span class="preprocessor">#include</span> <span class="include">&lt;xpcf/component/ConfigurableBase.h&gt;</span>
 
+<i class="conum" data-value="1"></i><b>(1)</b>
 <span class="preprocessor">#include</span> <span class="include">&quot;IDescriptorsExtractor.h&quot;</span>
+<span class="preprocessor">#include</span> <span class="include">&quot;SolARMyModuleAPI.h&quot;</span>
 
 <span class="keyword">namespace</span> SolAR {
 <span class="keyword">namespace</span> MODULES {
 <span class="keyword">namespace</span> MyModule {
 
-<i class="conum" data-value="1"></i><b>(1)</b>
+<i class="conum" data-value="2"></i><b>(2)</b>
 <span class="keyword">class</span> <span class="class">MyModule_API_DLLEXPORT</span> MyDescriptorsExtractor : <span class="directive">public</span> org::bcom::xpcf::ConfigurableBase, <span class="directive">public</span> <span class="directive">virtual</span> SolAR::api::features::IDescriptorsExtractor
 {
 <span class="directive">public</span>:
@@ -641,7 +632,7 @@ button.<br></p>
     ~MyDescriptorsExtractor() override;
     <span class="directive">void</span> unloadComponent () override;
 
-<i class="conum" data-value="2"></i><b>(2)</b>
+<i class="conum" data-value="3"></i><b>(3)</b>
     <span class="directive">inline</span> std::<span class="predefined-type">string</span> getTypeString() override { <span class="keyword">return</span> std::<span class="predefined-type">string</span>(<span class="string"><span class="delimiter">&quot;</span><span class="content">DescriptorsExtractorType::MYCOMPONENT</span><span class="delimiter">&quot;</span></span>) ;};
 
     <span class="comment">/// @brief Extracts a set of descriptors from a given image around a set of keypoints based on AKAZE algorithm</span>
@@ -660,7 +651,7 @@ button.<br></p>
 } <span class="comment">// namespace MODULES</span>
 } <span class="comment">// namespace SolAR</span>
 
-<i class="conum" data-value="3"></i><b>(3)</b>
+<i class="conum" data-value="4"></i><b>(4)</b>
 <span class="keyword">template</span> &lt;&gt; <span class="keyword">struct</span> org::bcom::xpcf::ComponentTraits&lt;SolAR::MODULES::MyModule::MyDescriptorsExtractor&gt;
 {
 
@@ -676,14 +667,18 @@ button.<br></p>
 <table>
 <tr>
 <td><i class="conum" data-value="1"></i><b>1</b></td>
-<td><span class="white">Add your export declaration MACRO defined in <em>MyModuleAPI.h</em> file to export your component in the dynamic library of your module (Here <em>MyModule_API_DLLEXPORT</em>).</span></td>
+<td><span class="white">Add the include files for the SolAR abstract interface that your component inherits, as well as the header file defining the export declaration MACRO of your module.</span></td>
 </tr>
 <tr>
 <td><i class="conum" data-value="2"></i><b>2</b></td>
-<td><span class="white">Here, you will have to define the interface of your component inherited from your SolAR interface. For instance, the <em>getStringType</em> and the <em>extract</em> methods declared in the IDescriptorExtractor abstract interface.</span></td>
+<td><span class="white">Add your export declaration MACRO defined in <em>MyModuleAPI.h</em> file to export your component in the dynamic library of your module (Here <em>MyModule_API_DLLEXPORT</em>).</span></td>
 </tr>
 <tr>
 <td><i class="conum" data-value="3"></i><b>3</b></td>
+<td><span class="white">Here, you will have to define the interface of your component inherited from your SolAR interface. For instance, the <em>getStringType</em> and the <em>extract</em> methods declared in the IDescriptorExtractor abstract interface.</span></td>
+</tr>
+<tr>
+<td><i class="conum" data-value="4"></i><b>4</b></td>
 <td><span class="white">The traits are automatically defined with a automatically generated UUID, the nam of the component and a description that you are free to change.</span></td>
 </tr>
 </table>
