Update solar site

--- a/create/component/index.html
+++ b/create/component/index.html
@@ -289,6 +289,17 @@ window.cookieconsent.initialise({
 		</li>
 	
 
+	
+	
+
+		<li >
+			<a href="/install/android/">
+				For Android
+				
+			</a>
+		</li>
+	
+
 
       </ul>
       <div class="submenuHelper">&gt;</div>
@@ -556,7 +567,7 @@ window.cookieconsent.initialise({
 <h3 id="download_qtcreator_wizards_for_xpcf"><a class="anchor" href="#download_qtcreator_wizards_for_xpcf"></a><a class="link" href="#download_qtcreator_wizards_for_xpcf">Download QTCreator wizards for XPCF</a></h3>
 <div class="paragraph">
 <p>Creating a new component from scratch can be a little bit tricky. To help you, a QTCreator wizard is available and will make the task much easier.<br>
-Start by installing this wizard by launching the <em>install.bat</em> on Windows (in your ${REMAKEN_PKG_ROOT}/packages/win-cl-14.1/xpcf/[version]/wizards) or <em>install.sh</em> on Linux (in your ${REMAKEN_PKG_ROOT}/packages/linux-gcc/xpcf/[version]/wizards).<br></p>
+Start by installing this wizard by launching the <em>install.bat</em> on Windows (in your ${REMAKEN_PKG_ROOT}/packages/win-cl-14.1/xpcf/[version]/wizards/qtcreator) or <em>install.sh</em> on Linux (in your ${REMAKEN_PKG_ROOT}/packages/linux-gcc/xpcf/[version]/wizards/qtcreator).<br></p>
 </div>
 <div class="paragraph">
 <p>You can also download the wizard on the following link:<br>
@@ -679,7 +690,7 @@ button.<br></p>
 </tr>
 <tr>
 <td><i class="conum" data-value="4"></i><b>4</b></td>
-<td><span class="white">The traits are automatically defined with a automatically generated UUID, the nam of the component and a description that you are free to change.</span></td>
+<td><span class="white">The traits are automatically defined with a automatically generated UUID, the name of the component and a description that you are free to change.</span></td>
 </tr>
 </table>
 </div>
