Update solar site

--- a/create/component/index.html
+++ b/create/component/index.html
@@ -599,7 +599,7 @@ Then unzip the downloaded file, and run the <em>install.bat</em> on Windows or t
 <div class="title">Figure 2. Create an SolAR Component in QT</div>
 </div>
 <div class="paragraph">
-<p>Then, set the name of your module, inspired by the name of the SolAR interface you will implement. Do not forget to specifiy the namespace of your module. In addition, you will have defined the SolAR interface that your component will inherit. Again, do not forget the namespace of the interface. If you need more information about the interfaces available in SolAR, check its <a href="../api/index.html#SolAR_API">API documentation</a>. Finally, you can define if your component is configurable. If yes, you will be able to easily configure it in a dedicated file attached to your pipeline.</p>
+<p>Then, set the name of your component, inspired by the name of the SolAR interface you will implement. Do not forget to specifiy the namespace of your component based on the common namespace used for your module. In addition, you will have defined the SolAR interface that your component will inherit. Again, do not forget the namespace of the interface. If you need more information about the interfaces available in SolAR, check its <a href="../api/index.html#SolAR_API">API documentation</a>. Finally, you can define if your component is configurable. If yes, you will be able to easily configure it in a dedicated file attached to your pipeline.</p>
 </div>
 <div class="imageblock" style="text-align: center">
 <div class="content">
